--- a/css/style-login.css
+++ b/css/style-login.css
@@ -10,6 +10,13 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+label{
+    font-size: 14px;
+    color: #fff;
+    background-position: center center;
+    text-transform: uppercase;
+}
+
 .containerPrincipal{
     display: flex;
     flex-direction: column;
@@ -35,10 +42,11 @@ input{
     outline: 0;
     background-color: #fff;
     width: 100%;
-    border: 0;
     margin: 0 0 15px;
     box-sizing: border-box;
     font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
 }
 
 .botao{
@@ -53,6 +61,7 @@ input{
     --webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .form-group{
